[tool.poetry]
name = "mlflow-docker"
version = "0.1.0"
description = "Containerized mlflow"
authors = ["Martin Hansen <hojland93@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.0"
mysqlclient = "^2.0.3"
mlflow = "1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
